--- a/style.css
+++ b/style.css
@@ -99,3 +99,47 @@ height: 350px;
 }
 
 /* I can't see how to closer the img to the text */
+
+/* MAIN CONTENT */
+
+.main{
+  height: 350px;
+}
+.main .container{
+  /* height: 100%; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 40px 0;
+  gap: 20px;
+}
+
+.main .container h3{
+  font-size: 36px;
+}
+
+.box-container{
+  display: flex;
+  justify-content: center;
+  gap: 60px;
+  
+}
+.boxes{
+  display: flex;
+  flex-direction: column;
+  width: 165px;
+  text-align: center;
+  align-items: center;
+  gap: 10px;
+  flex: 1;
+  
+}
+.box{
+  height: 150px;
+  width: 150px;
+  border: 3px solid #3882f6;
+  border-radius: 15px;
+}
+
+
+/* Quote section */
