--- a/style.css
+++ b/style.css
@@ -91,6 +91,7 @@ height: 350px;
     display: flex;
     align-items: center;
     max-width: 50%;
+    border-radius: 20px;
     
 }
 
@@ -207,5 +208,93 @@ height: 350px;
   border: 2px solid #e5e7eb;
   text-decoration: none;
   border-radius: 10px;
+}
 
+.footer{
+  background: #1f2937;
+  height: 100px;
+}
+
+.footer .container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  color: #e5e7eb
+}
+
+@media (min-width: 700px) and (max-width:800px){
+  .navbar .container{
+    justify-content: space-around;
+  }
+
+  .header{
+    height: 700px;
+  }
+  .header .container{
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
+  }
+
+  .header .text{
+    max-width: 100%;
+    align-items: center;
+    gap: 20px;
+  }
+
+  .header h1{
+    padding: 40px;
+    padding-right: 0;
+    font-size: 60px;
+  }
+
+  .header p{
+    font-size: 36px;
+    padding: 0 30px;
+    text-align: center;
+  
+  }
+
+  .header .image{
+    text-align: center;
+    font-size: 24px;
+    
+  }
+
+  .main{
+    height: 650px;
+  }
+
+  .main .container{
+    gap: 40px;
+  }
+.box-container{
+  flex-wrap: wrap;
+  width: 50%;
+  /* flex-direction: column; */
+}
+  .boxes{
+    width: 50%;
+  }
+
+  .quote .container{
+    padding: 50px;
+  }
+  
+  .quote figure{
+    gap: 40px;
+  }
+ .signUp .container{
+    padding: 0 10px;
+  }
+  .signUp .text p{
+    margin-top: 10px;
+    padding-right: 80px;
+  }
+  .signButton{
+    padding: 5px 10px;
+    width: 200px;
+    text-align: center;
+  }
 }
